versioned_docs/version-23.2/manage/kubernetes/cluster-property-configuration.mdx
---
title: Configure Cluster Properties in Kubernetes
linkRoot: ../../../
deployment: Kubernetes
contextLinks:
  - name: 'Linux'
    to: 'manage/cluster-maintenance/cluster-property-configuration'
  - name: 'Kubernetes'
    to: manage/kubernetes/cluster-property-configuration
---

<head>
    <meta name="title" content="Configure Cluster Properties in Kubernetes | Redpanda Docs" data-rh="true"/>
    <meta name="description" content="Configure cluster properties using the Redpanda Helm chart" data-rh="true"/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/cluster-property-configuration/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ValuesYaml from './shared/_values-yaml.mdx'
import ClusterProperty from '../shared/tiered-storage/_cluster-props.mdx'
import ContextLink from '@site/src/components/ContextButton.js'

<ContextLink frontmatter={frontMatter}
/>

When you install Redpanda, it automatically generates a cluster configuration file with default settings assigned to each cluster property.
You might want to change some of the default settings, particularly if you plan to use features such as rack awareness or Tiered Storage, which are disabled by default.

Instead of using rpk to configure cluster properties, you must override the defaults in the Redpanda Helm chart's values. The cluster configuration changes you make using Helm are persisted to ensure that your preferences are maintained across pod restarts and upgrades.

Using Helm to modify your cluster configuration provides the following advantages to using rpk:

- **Automatic pod restarts**: When configuration changes are made, Helm restarts the pods automatically, ensuring the changes are immediately applied.
- **Cluster reproducibility**: Helm allows you to keep track of your configuration changes, enabling you to reproduce the same configuration easily if you ever need to set up a similar cluster.
- **Recovery**: In case of issues, Helm makes it possible to revert to a previous state, providing an effective disaster recovery mechanism.

## Find cluster properties

To see what options you can override in the chart, use the `helm show values` command:

```bash
helm repo add redpanda https://charts.redpanda.com
helm repo update
helm show values redpanda/redpanda
```

This command displays all the values, descriptions, and defaults, which are also documented in the [Redpanda Helm Chart Specification](../../../reference/redpanda-helm-spec).

To view all cluster properties, along with their descriptions and default settings, refer to [Cluster configuration properties](../../../reference/cluster-properties) and [Tunable properties](../../../reference/tunable-properties). Some cluster configuration properties are nested within other objects in the Helm chart's values. For example, `cloud_storage_access_key` is nested inside `storage.tieredStorage`.

:::note
[Tunable properties](../../../reference/tunable-properties), such as internal buffer sizes, have default settings that you typically do not need to modify during normal operations. You should only change these properties after collecting sufficient data to warrant a change.
:::

## Edit cluster properties

To edit the values of cluster properties, you can either override the defaults in the Redpanda custom resource when using Helm and Redpanda Operator, or override the defaults using the `--values` option or `--set` option in the command line when using only Helm.

For example, to set the <ClusterProperty name="cloud_storage_access_key" frontmatter={frontMatter}/> cluster configuration:

<Tabs groupId="kubernetes-tool">
<TabItem value="operator" label="Helm + Operator">

```yaml title="redpanda-cluster.yaml"
apiVersion: cluster.redpanda.com/v1alpha1
kind: Redpanda
metadata:
  name: redpanda
spec:
  clusterSpec:
    storage:
      tieredConfig:
        cloud_storage_access_key: <access-key>
```

```bash
kubectl apply -f redpanda-cluster.yaml -n redpanda
```



</TabItem>
<TabItem value="helm" label="Helm">

<Tabs groupId="helm-config" queryString>
<TabItem value="values" label="--values">

```yaml title="cloud-storage.yaml"
storage:
  tieredConfig:
    cloud_storage_access_key: <access-key>
```

```bash
helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --values cloud-storage.yaml --reuse-values
```

</TabItem>
<TabItem value="flags" label="--set">

```bash
helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
  --set storage.tieredConfig.cloud_storage_access_key=<access-key>
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

## View the current value of a property

To see the current value of a property for a broker, you can run `rpk cluster config get <property_name>` inside a container that's running Redpanda.

In this example, the command is executed on a Pod called `redpanda-0` in the `redpanda` namespace. You can provide your own namespace in the `-n` flag.

<Tabs groupId="tls" queryString>
<TabItem value="enabled" label="TLS Enabled">

```bash
kubectl exec redpanda-0 -n redpanda -c redpanda -- \
  rpk cluster config get log_compression_type \
    --admin-api-tls-enabled \
    --admin-api-tls-truststore <path-to-admin-api-ca-certificate> \
    --api-urls <broker-url>:<admin-api-port>
```

</TabItem>
<TabItem value="disabled" label="TLS Disabled">

```bash
kubectl exec redpanda-0 -n redpanda -c redpanda -- \
  rpk cluster config get log_compression_type \
    --api-urls <broker-url>:<admin-api-port> \
```

</TabItem>
</Tabs>

Example output:

```
producer
```

## Export a Redpanda configuration file

To see all Redpanda configurations for a broker, you can use the `rpk cluster config export` command to save the current Redpanda configuration to a file. For example, you may want to use the configuration file during debugging.

:::tip
To get more detailed information about your Redpanda deployment, generate a [diagnostics bundle](../troubleshooting/diagnostics-bundle), which includes the Redpanda configuration files for all brokers in the cluster.
:::

1. Execute the `rpk cluster config export` command inside a Pod container that's running a Redpanda broker.

  In this example, the command is executed on a Pod called `redpanda-0` in the `redpanda` namespace. You can provide your own namespace in the `-n` flag.

  <Tabs groupId="tls" queryString>
  <TabItem value="enabled" label="TLS Enabled">

  ```bash
  kubectl exec redpanda-0 -n redpanda -c redpanda -- \
  rpk cluster config export –filename <filename>.yaml \
    --admin-api-tls-enabled \
    --admin-api-tls-truststore <path-to-admin-api-ca-certificate> \
    --api-urls <broker-url>:<admin-api-port>
  ```

  </TabItem>
  <TabItem value="disabled" label="TLS Disabled">

  ```bash
  kubectl exec redpanda-0 -n redpanda -c redpanda -- \
  rpk cluster config export –filename <filename>.yaml \
    --api-urls <broker-url>:<admin-api-port> \
  ```

  </TabItem>
  </Tabs>

  To save the configuration file outside of your current working directory, provide an absolute path to the `–filename` flag. Otherwise, the file is saved in your current working directory.

  <details>
  <summary>
  Example output
  </summary>

  ```
  Wrote configuration to file "/tmp/config_625125906.yaml".
  ```

  </details>

1. On your host machine, make a directory in which to save the configuration file:

  ```bash
  mkdir configs
  ```

1. Copy the configuration file from the Pod to your host machine:

  Replace `<path-to-file>` with the path to your exported file.

  ```bash
  kubectl cp redpanda/redpanda-0:<path-to-file> configs/redpanda-0-configuration-file.yaml
  ```

1. Remove the exported file from the Redpanda container:

  ```bash
  kubectl exec redpanda-0 -c redpanda -n redpanda -- rm <path-to-file>
  ```

When you've finished with the file, remove it from your host machine:

```bash
rm -r configs
```

## Suggested reading

- Using Raft to centralize cluster configuration in Redpanda [article](https://redpanda.com/blog/raft-centralized-cluster-configuration-improvements/)
